# document_agent_service

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/agent/: __init__.py  agent.py  llm_backend.py  tools.py
app/agent/cv_data/: cv.json
app/api/: __init__.py  admin_app.py  agent_app.py  router_agent.py  router_users.py
app/core/: __init__.py  config.py
app/db/: __init__.py  factory.py  interfaces.py  user_handler.py
app/db/mongo/: __init__.py  connection.py  doc_repo.py  factory.py  user_repo.py
app/ingestion/: __init__.py  loader.py  watch_service.py  watcher.py
app/ingestion/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  txt_parser.py
app/ingestion/watchers/: __init__.py  factory.py
app/ingestion/watchers/local/: __init__.py  local_handlers.py  local_watcher.py
app/models/: __init__.py  api_models.py  document_models.py  user_models.py
doc/: api.md  architecture.md  configuration.md  deployment.md  features.md  project_structure.md
scripts/: setup_docker_env.sh
